[gd_scene load_steps=18 format=3 uid="uid://c77t7dmwd146d"]

[ext_resource type="Texture2D" uid="uid://d2coi3axj6nlv" path="res://Resources/Health Bar Asset Pack 2 by Adwit Rahman/hp_background.png" id="1_6wc5s"]
[ext_resource type="Texture2D" uid="uid://cr67ql28321m1" path="res://Resources/Coins/coin_gold.png" id="1_7w40k"]
[ext_resource type="Texture2D" uid="uid://cn6wd2ex5mdm0" path="res://top_panel_bg.png" id="1_h23x1"]
[ext_resource type="Script" path="res://Scripts/Top_Panel.gd" id="1_j2beb"]
[ext_resource type="Texture2D" uid="uid://nef4s2o586lx" path="res://Resources/Health Bar Asset Pack 2 by Adwit Rahman/HpBar.png" id="2_l6gkd"]
[ext_resource type="Texture2D" uid="uid://c4blxhkew45vh" path="res://hp_bar.png" id="3_egiit"]

[sub_resource type="LabelSettings" id="LabelSettings_jakgq"]
font_size = 8

[sub_resource type="AtlasTexture" id="AtlasTexture_77hs8"]
atlas = ExtResource("1_7w40k")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5aa1y"]
atlas = ExtResource("1_7w40k")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pm23"]
atlas = ExtResource("1_7w40k")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cc1tu"]
atlas = ExtResource("1_7w40k")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymt8n"]
atlas = ExtResource("1_7w40k")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5retd"]
atlas = ExtResource("1_7w40k")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sycvl"]
atlas = ExtResource("1_7w40k")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hppcp"]
atlas = ExtResource("1_7w40k")
region = Rect2(112, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_fhde5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_77hs8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5aa1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pm23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cc1tu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymt8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5retd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sycvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hppcp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_b5a7m"]
font_size = 11

[node name="TopPanel" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 175.0
offset_bottom = 25.0
script = ExtResource("1_j2beb")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_h23x1")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HPDisplay" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="PlayerHP" type="TextureProgressBar" parent="MarginContainer/HBoxContainer/HPDisplay"]
custom_minimum_size = Vector2(75, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
value = 50.0
nine_patch_stretch = true
texture_under = ExtResource("1_6wc5s")
texture_progress = ExtResource("2_l6gkd")

[node name="PlayerHPLabel" type="Label" parent="MarginContainer/HBoxContainer/HPDisplay"]
layout_mode = 2
text = "50 / 100"
label_settings = SubResource("LabelSettings_jakgq")
vertical_alignment = 3

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/HBoxContainer/HPDisplay"]
position = Vector2(46.5, 8)
scale = Vector2(1.1625, 1.55556)
texture = ExtResource("3_egiit")

[node name="CoinsDisplay" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer/CoinsDisplay"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.42

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="MarginContainer/HBoxContainer/CoinsDisplay/Panel"]
position = Vector2(9, 8)
sprite_frames = SubResource("SpriteFrames_fhde5")
autoplay = "default"

[node name="PlayerCoins" type="Label" parent="MarginContainer/HBoxContainer/CoinsDisplay"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "1.23K"
label_settings = SubResource("LabelSettings_b5a7m")
vertical_alignment = 1
visible_characters = 6
visible_ratio = 1.2
